--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -16,32 +16,34 @@ library(grid)
 img <- readPNG('nasdaq_small.png')
 grid.raster(img)
 ```
-
-
-
 ```{r, include=FALSE}
 Sys.setenv(LANG = "en")
-library("knitr")
+#install.packages("quantmod", dependencies=TRUE)
 library("quantmod")
+#install.packages("zoo", dependencies=TRUE)
 library("zoo")
+#install.packages("TTR", dependencies=TRUE)
 library("TTR")
-
+#install.packages("png", dependencies=TRUE)
+library("png")
+#install.packages("checkpoint", dependencies=TRUE)
+#library("checkpoint")
+#checkpoint ("2015-04-05", R.version = "3.1.2", checkpointLocation = "C:/Users/Екатерина/Documents/GitHub/R/trading")
 
 #Считываем данные из файла, приведем их к виду, пригодному для анализа в R:
-Quotes_ORCL1 <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
-for (i in 2:6) Quotes_ORCL1[,i]  <- as.numeric(as.character(Quotes_ORCL1[,i]))
+Quotes1 <- read.csv(file="HistoricalQuotes.csv",stringsAsFactors = FALSE, header=TRUE, sep=",", dec= ".")
+for (i in 2:6) Quotes1[,i]  <- as.numeric(as.character(Quotes1[,i]))
 #Инвертируем значения:
-Quotes_ORCL <- subset(Quotes_ORCL1, select = c("date", "close", "volume",  "open", "high",  "low")); 
+Quotes <- subset(Quotes1, select = c("date", "close", "volume",  "open", "high",  "low")); 
 
-for (i in 1:nrow(Quotes_ORCL1)) Quotes_ORCL[i,]  <- Quotes_ORCL1[nrow(Quotes_ORCL1) - i + 1,]
-Quotes_ORCL[,1]  <- as.Date(Quotes_ORCL[,1])
-Quotes_ORCL = Quotes_ORCL[-1,]
-rownames(Quotes_ORCL)<-NULL
-rm(Quotes_ORCL1)
+for (i in 1:nrow(Quotes1)) Quotes[i,]  <- Quotes1[nrow(Quotes1) - i + 1,]
+Quotes[,1]  <- as.Date(Quotes[,1])
+Quotes = Quotes[-1,]
+rownames(Quotes)<-NULL
+rm(Quotes1)
 
-opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
+#opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 ```
-
 
 **Объектом исследования** является финансовое состояние корпорации ORACLE, выраженное в биржевых котировках.
 
@@ -60,7 +62,7 @@ opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 
 #Описание данных:
 
-В нашем наборе данных `r nrow(Quotes_ORCL)` наблюдений и 6 переменных. Исходный файл с данными в формате csv.
+В нашем наборе данных `r nrow(Quotes)` наблюдений и 6 переменных. Исходный файл с данными в формате csv.
 
 
 ###Описание исходных переменных:
@@ -73,47 +75,47 @@ opts_chunk$set(echo=FALSE, message=FALSE, fig.align = "center")
 - **low** : самая низкая цены за акцию за день.
 
 Описательная статистика по нашей выбоке:
-```{r, results='asis'}
-knitr::kable(summary(Quotes_ORCL))
+```{r, results='asis', echo=FALSE}
+knitr::kable(summary(Quotes))
 ```
 
 Линейный график зависимости цены закрытия для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
 
-```{r}
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+```{r, echo=FALSE, fig.align='center'}
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
 ```
 
-```{r, include=FALSE}
+```{r, include=FALSE, echo=FALSE, fig.align='center'}
 #Переведем в удобоваримый вид для наших пакетов
-ORCL <- xts(Quotes_ORCL[, 2:6], order.by=as.POSIXct(Quotes_ORCL[,1]))
+ORCL <- xts(Quotes[, 2:6], order.by=as.POSIXct(Quotes[,1]))
 ORCL <- ORCL[ ! duplicated( index(ORCL) ),]
 ```
 
 
 Линейный график зависимости объема торгов для 300 наблюдений (период с 2005-03-28 по 2006-06-02):
 
-```{r}
-plot(Quotes_ORCL[1:300,3], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Объем торгов", main="Акции компании ORACLE", ylim=c(0,203555500) )
+```{r, echo=FALSE, fig.align='center'}
+plot(Quotes[1:300,3], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Объем торгов", main="Акции компании ORACLE", ylim=c(0,203555500) )
 ```
 
 
 График цены в форме японских свечей (где зеленым цветом отображено, когда цена закрытия выше цены открытия, красным - наоборот):
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL,subset='2005-03-28::2005-10-26')
 ```
 
 
 Столбиковый график:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 barChart(ORCL,subset='2005-03-28::2005-10-26', theme='white.mono',bar.type='hlc')
 ```
 
 
 Скользящее среднее на основании цены закрытия, окно усреднения - 10 отсчетов:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
 ```
 
@@ -121,41 +123,41 @@ chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(10)")
 
 Скользящее среднее на основании цены закрытия, окно усреднения - 50 отсчетов:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 chartSeries(ORCL, subset='2005-03-28::2005-10-26',TA="addSMA(50)")
 ```
 
 
 График сопоставления скользящих средних между собой:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 #График сопоставления скользящих средних между собой:
-for (i in 10:nrow(Quotes_ORCL)) Quotes_ORCL[i,7] <- mean(Quotes_ORCL[(i-9):i,2])
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,7], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[7] <- "SMAS"
-for (i in 50:nrow(Quotes_ORCL)) Quotes_ORCL[i,8] <- mean(Quotes_ORCL[(i-49):i,2])
-lines(Quotes_ORCL[1:300,8], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[8] <- "SMAL"
+for (i in 10:nrow(Quotes)) Quotes[i,7] <- mean(Quotes[(i-9):i,2])
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,7], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[7] <- "SMAS"
+for (i in 50:nrow(Quotes)) Quotes[i,8] <- mean(Quotes[(i-49):i,2])
+lines(Quotes[1:300,8], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[8] <- "SMAL"
 legend("topleft", c("SMA-S", "SMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
 
 График сопоставления экспоненциальных скользящих средних между собой:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 #График сопоставления экспоненциальных скользящих средних между собой:
-Quotes_ORCL[,9] <- EMA(Quotes_ORCL[,2], n=10, ratio = 1-((10-1)/(10+1)))
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[9] <- "EMAS"
-Quotes_ORCL[,10] <- EMA(Quotes_ORCL[,2], n=50, ratio = 1 - ((50-1)/(50+1)))
-lines(Quotes_ORCL[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[10] <- "EMAL"
+Quotes[,9] <- EMA(Quotes[,2], n=10, ratio = 1-((10-1)/(10+1)))
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,9], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[9] <- "EMAS"
+Quotes[,10] <- EMA(Quotes[,2], n=50, ratio = 1 - ((50-1)/(50+1)))
+lines(Quotes[1:300,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[10] <- "EMAL"
 legend("topleft", c("EMA-S", "EMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
-```{r, include=FALSE}
+```{r, include=FALSE, echo=FALSE}
 WMA <- function(L, data){
   wma_w <- function(L,n)
   {
@@ -166,31 +168,31 @@ WMA <- function(L, data){
   for (i in 1:NROW(data)){
     if (i<L) x[i] <- NA
     else {
-      value = 0;
-      counter = 0;
+      value = 0
+      counter = 0
       for (j in i:(i-L+1)){
         value = value + data[j] * wma_w(L,counter)
-        counter = counter + 1;
+        counter = counter + 1
       }
-      x[i]<-value;
+      x[i]<-value
     }
   }
   return(x)
 }
-Quotes_ORCL[,11] <- WMA(10, Quotes_ORCL[, 2])
-Quotes_ORCL[,12] <- WMA(50, Quotes_ORCL[, 2])
+Quotes[,11] <- WMA(10, Quotes[, 2])
+Quotes[,12] <- WMA(50, Quotes[, 2])
 ```
 
 
 График сопоставления окон усреднения:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 #График сопоставления различных окон между собой:
-plot(Quotes_ORCL[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:300,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[11] <- "WMAS"
-lines(Quotes_ORCL[1:300,12], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-colnames(Quotes_ORCL)[12] <- "WMAL"
+plot(Quotes[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:300,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[11] <- "WMAS"
+lines(Quotes[1:300,12], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+colnames(Quotes)[12] <- "WMAL"
 legend("topleft", c("WMA-S", "WMA-L"), col=c("blue", "orange"), lwd=4)
 ```
 
@@ -198,38 +200,40 @@ legend("topleft", c("WMA-S", "WMA-L"), col=c("blue", "orange"), lwd=4)
 
 Графики для сопоставления короткого окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 #Графики для короткого окна усреднения:
-plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:100,7], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,9], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:100,7], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,9], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,11], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 legend("topleft", c("SMA-S", "EMA-S", "WMA-S"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
 Графики для длинного окна усреднения, для наглядности мы возьмем первые 100 наблюдений:
 
-```{r}
+```{r, echo=FALSE, fig.align='center'}
 #Графики для длинного окна усреднения:
-plot(Quotes_ORCL[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
-lines(Quotes_ORCL[1:100,8], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[1:100,12], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+plot(Quotes[1:100,2], type="l", lwd=2, col="black", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,16) )
+lines(Quotes[1:100,8], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[1:100,12], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
 legend("topleft", c("SMA-L", "EMA-L", "WMA-L"), col=c("red", "orange", "blue"), lwd=4)
 ```
 
 
 Для своего анализа я выбрала EMA-S и EMA-L, так как они более чувствительны к недавним значения. На графике розовый фон имеют интервалы времени, в течение которых значения "медленной" скользящей средней (EMA-L) превышают значения "быстрой" скользящей средней (EMA-S). Зеленый фон имеет обратная ситуация.
 
-```{r}
-drawSquares <- function(data, start){
-  #Графики для EMA-S и EMA-L:
-plot(Quotes_ORCL[10:nrow(Quotes_ORCL),2], xaxt='n',type="l", lwd=2, col= rgb(0,0,0,alpha = 0.4), xlab="", ylab="Цена закрытия", main="Акции компании ORACLE", ylim=c(10,25) )
-lines(Quotes_ORCL[10:nrow(Quotes_ORCL),9], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-lines(Quotes_ORCL[10:nrow(Quotes_ORCL),10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
-axis(side=1, at=vec,labels=Quotes_ORCL[vec,1], las=2,cex.axis = 0.6,srt = 60)
+```{r, echo=FALSE, fig.align='center'}
+#Графики для EMA-S и EMA-L:
 
 
+drawSquares <- function(data, start, plot=FALSE){
+  if(plot){
+    plot(Quotes[,2], xaxt='n',type="l", lwd=2, col= rgb(0,0,0,alpha = 0.4), xlab="", ylab="Цена закрытия", main="Акции компании ORACLE")
+lines(Quotes[,9], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )
+lines(Quotes[,10], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE" )   
+    
+  }
   vec <- vector()
   notFirst = FALSE;
   init = FALSE;
@@ -244,7 +248,7 @@ axis(side=1, at=vec,labels=Quotes_ORCL[vec,1], las=2,cex.axis = 0.6,srt = 60)
       if (data[i,1]<data[i,2]){
         init=FALSE;
         vec <- c(vec,i)
-        if (notFirst)   rect(ix,miny,i,maxy, col=rgb(0.3,0.9,0.5,alpha=0.3));
+        if (notFirst & plot)   rect(ix,miny,i,maxy, col=rgb(0.3,0.9,0.5,alpha=0.3));
         if (!notFirst) notFirst = TRUE;
         ix = i;
       }
@@ -252,7 +256,7 @@ axis(side=1, at=vec,labels=Quotes_ORCL[vec,1], las=2,cex.axis = 0.6,srt = 60)
       if (data[i,1]>data[i,2]){
         init=TRUE;
         vec <- c(vec,i)
-        if (notFirst) rect(ix,miny,i,maxy, col=rgb(0.6,0.2,0.7,alpha=0.3));
+        if (notFirst & plot) rect(ix,miny,i,maxy, col=rgb(0.6,0.2,0.7,alpha=0.3));
         if (!notFirst) notFirst = TRUE;
         ix = i;
       }
@@ -261,13 +265,15 @@ axis(side=1, at=vec,labels=Quotes_ORCL[vec,1], las=2,cex.axis = 0.6,srt = 60)
   return(vec)
 }
 
-vec <- drawSquares(Quotes_ORCL[,9:10], 50)
+vec <- drawSquares(Quotes[,9:10], 50, plot=TRUE)
+axis(side=1, at=vec,labels=Quotes[vec,1], las=2,cex.axis = 0.6,srt = 60)
 legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 
 ```
 
 
 Простейшая торговая стратегия будет состоять в следующем:
+
 - Актив мы покупаем на все имеющиеся в момент покупки средства 
 - Сделки совершаются только на собственные средства (отсутствует плечо)
 - Открываем длинные позиции (быки)
@@ -275,48 +281,156 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 - Нет комиссий биржи
 - Сигнал на покупку: когда быстрая (EMA-S) обгоняет медленную (EMA-L) - розовая область графика переходит в зеленую
 - Сигнал на продажу: когда медленная (EMA-L) обгоняет быструю (EMA-S) - зеленая область графика переходит в розовую
-- На начало переиода у нас `r Quotes_ORCL[1, 2]*500` долларов
+- На начало переиода у нас `r Quotes[1, 2]*500` долларов
 
-
-```{r, include=FALSE}
+```{r, include=FALSE, echo=FALSE}
 #imitation game
-Quotes_ORCL$budget <- Quotes_ORCL[NROW(Quotes_ORCL),2]*500
-Quotes_ORCL$papers <- 0
+Quotes$budget <- Quotes[NROW(Quotes),2]*500
+Quotes$papers <- 0
 initx <- 50
-intersections <- drawSquares(Quotes_ORCL[,9:10], initx)
+intersections <- drawSquares(Quotes[,9:10], initx, plot = TRUE)
 shallBuy <- FALSE
-if (Quotes_ORCL[initx,9] < Quotes_ORCL[initx,10]) shallBuy <-TRUE
+if (Quotes[initx,9] < Quotes[initx,10]) shallBuy <-TRUE
 for (i in 1:NROW(intersections))
   {
   if (shallBuy){
     index <- intersections[i]
-    price <- Quotes_ORCL[index,2]
-    budget <-  Quotes_ORCL[index,13]
+    price <- Quotes[index,2]
+    budget <-  Quotes[index,13]
     papers <-  budget  %/% price
     budget <- budget %% price
-    Quotes_ORCL[(index:(NROW(Quotes_ORCL))),14]<-papers
-    Quotes_ORCL[(index:(NROW(Quotes_ORCL))),13]<-budget
-    shallBuy <- FALSE;
+    Quotes[(index:(NROW(Quotes))),14]<-papers
+    Quotes[(index:(NROW(Quotes))),13]<-budget
+    shallBuy <- FALSE
   }else{
     if (!shallBuy){
       index <- intersections[i]
-      price <- Quotes_ORCL[index,2]
-      budget <-  Quotes_ORCL[index,13] + price * Quotes_ORCL[index,14]
+      price <- Quotes[index,2]
+      budget <-  Quotes[index,13] + price * Quotes[index,14]
       papers <-  0
-      Quotes_ORCL[(index:NROW(Quotes_ORCL)),14]<-papers
-      Quotes_ORCL[(index:NROW(Quotes_ORCL)),13]<-budget
-      shallBuy <- TRUE;
+      Quotes[(index:NROW(Quotes)),14]<-papers
+      Quotes[(index:NROW(Quotes)),13]<-budget
+      shallBuy <- TRUE
     }
   }
+  
 }
+legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 ```
 
 
-В результате  работы механизма у нас осталось `r Quotes_ORCL[nrow(Quotes_ORCL), 13]` долларов и  `r Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14]` акций на конец периода. Иначе говоря, наша прибыль оставила `r Quotes_ORCL[nrow(Quotes_ORCL), 13] + Quotes_ORCL[nrow(Quotes_ORCL), 2]*Quotes_ORCL[nrow(Quotes_ORCL), 14] - Quotes_ORCL[nrow(Quotes_ORCL), 2]*500` доллара.
+В результате  работы механизма у нас осталось `r Quotes[nrow(Quotes), 13]` долларов и  `r Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14]` акций на конец периода. Иначе говоря, наша прибыль оставила `r Quotes[nrow(Quotes), 13] + Quotes[nrow(Quotes), 2]*Quotes[nrow(Quotes), 14] - Quotes[nrow(Quotes), 2]*500` доллара.
 
 
 
-Попробуем добиться лучшего финансового результата, варьируя длительность окна усреднения. Пусть короткое окно усреднения будет от 5 до 10 счетов, а большое от 20 до 50 счетов. Определим лучшие варианты развития событий:
+Попробуем добиться лучшего финансового результата, варьируя длительность окна усреднения. Пусть короткое окно усреднения будет от 5 до 10 счетов, а большое от 20 до 50 счетов. Определим лучшие варианты развития событий для всего интервала времени:
 
 
+```{r, include=FALSE, echo=FALSE}
+# #Попробуем добиться лучшего финансового результата, варьирую длительность окна усреднения:
+# 
+# 
+# Quotes_S <- subset(Quotes, select = c("date", "close", "volume",  "open", "high",  "low"))
+# Quotes_L <- subset(Quotes, select = c("date", "close", "volume",  "open", "high",  "low"))
+# result <- data.frame(big = numeric(), small = numeric(), budget = numeric(), stock = numeric(), profit = numeric())
+# 
+# for (small in 5:10) {
+#   #SMA    
+#   a <- ncol(Quotes_S)+1 #номер нашего испытания
+#   for (i in small:nrow(Quotes_S)) Quotes_S[i,a] <- mean(Quotes_S[(i-(small - 1)):i,2])
+#   colnames(Quotes_S)[ncol(Quotes_S)] <- paste("SMAS", small, sep=" ")
+# 
+#   #EMA
+#   Quotes_S[,ncol(Quotes_S) + 1] <- EMA(Quotes_S[,2], n=small, ratio = 1-((small-1)/(small+1)))
+#   colnames(Quotes_S)[ncol(Quotes_S)] <- paste("EMAS", small, sep=" ")
+#   
+#   #WMA
+#   Quotes_S[,ncol(Quotes_S) + 1] <- WMA(small, Quotes_S[, 2])
+#   colnames(Quotes_S)[ncol(Quotes_S)] <- paste("WMAS", small, sep=" ")
+# 
+#  }
+# 
+# 
+# for (big in 20:50) {
+#   #SMA    
+#   a <- ncol(Quotes_L)+1 #номер нашего испытания
+#   for (i in big:nrow(Quotes_L)) Quotes_L[i,a] <- mean(Quotes_L[(i-(big - 1)):i,2])
+#   colnames(Quotes_L)[ncol(Quotes_L)] <- paste("SMAL", big, sep=" ")
+#   
+#   #EMA
+#   Quotes_L[,ncol(Quotes_L) + 1] <- EMA(Quotes_L[,2], n=big, ratio = 1-((big-1)/(big+1)))
+#   colnames(Quotes_L)[ncol(Quotes_L)] <- paste("EMAL", big, sep=" ")
+#   
+#   #WMA
+#   Quotes_L[,ncol(Quotes_L) + 1] <- WMA(big, Quotes_L[, 2])
+#   colnames(Quotes_L)[ncol(Quotes_L)] <- paste("WMAL", big, sep=" ")
+#     
+# }
+# 
+# 
+# 
+# 
+# Quotes_strategy <- subset(Quotes, select = c("date", "close", "volume",  "open", "high",  "low"))
+# #imitation game
+# 
+# for (big in 1:6) {
+#   Quotes_L <- Quotes_L[,-1]
+#   Quotes_S <- Quotes_S[,-1]
+# }
+# 
+# 
+# 
+# #Игра в имитацию
+# for (small in 1:(ncol(Quotes_S))) {
+#   for (big in 1:(ncol(Quotes_L))) {
+#     Quotes_strategy$budget <- Quotes_strategy[NROW(Quotes_strategy),2]*500
+#     Quotes_strategy$papers <- 0
+#     for (i in 1:50) if(is.na(Quotes_L[i,big])) initx <- i +1
+#   
+#     Quotes_strategy["Small"] <- Quotes_S[,small] 
+#     Quotes_strategy["Big"] <- Quotes_L[,big] 
+#   
+#     intersections <- drawSquares(Quotes_strategy[,9:10], initx, plot=FALSE)
+#     shallBuy <- FALSE
+#     if (Quotes_strategy[initx,9] < Quotes_strategy[initx,10]) shallBuy <-TRUE
+#     for (i in 1:NROW(intersections))
+#     {
+#       if (shallBuy){
+#         index <- intersections[i]
+#         price <- Quotes_strategy[index,2]
+#         budget <-  Quotes_strategy[index,7]
+#         papers <-  budget  %/% price
+#         budget <- budget %% price
+#         Quotes_strategy[(index:(NROW(Quotes_strategy))),8]<-papers
+#         Quotes_strategy[(index:(NROW(Quotes_strategy))),7]<-budget
+#         shallBuy <- FALSE
+#       }else{
+#         if (!shallBuy){
+#           index <- intersections[i]
+#           price <- Quotes_strategy[index,2]
+#           budget <-  Quotes_strategy[index,7] + price * Quotes_strategy[index,8]
+#           papers <-  0
+#           Quotes_strategy[(index:NROW(Quotes_strategy)),8]<-papers
+#           Quotes_strategy[(index:NROW(Quotes_strategy)),7]<-budget
+#           shallBuy <- TRUE
+#         }
+#       }
+#     }
+#  
+# 
+#     result[nrow(result) + 1, 1] <- colnames(Quotes_L)[[big]]
+#     result[nrow(result), 2] <- colnames(Quotes_S)[[small]]
+#     result[nrow(result), 3] <- Quotes_strategy[nrow(Quotes_strategy),7]
+#     result[nrow(result), 4] <- Quotes_strategy[nrow(Quotes_strategy),8]
+#     result[nrow(result), 5] <- Quotes_strategy[nrow(Quotes_strategy), 7] + Quotes_strategy[nrow(Quotes_strategy),2]*Quotes_strategy[nrow(Quotes_strategy),8] - Quotes_strategy[1, 7]
+#     Quotes_strategy<- Quotes_strategy[,-c(9,10)]
+#   
+#   }
+# }
+# 
+```
 
+```{r, fig.align='center', echo=FALSE}
+img <- readPNG('sort.png')
+grid.raster(img)
+```
